# dtm

./: .gitignore  README.md  biome.json  configNotes.md  index.html  overview.md  package-lock.json  package.json  release.json  tauri-codegen.toml  tsconfig.json  tsconfig.node.json  verify_config.ts  vite.config.ts  vitest.config.ts  wdio.conf.mjs  wdio.conf.ts
.agent/rules/: deepwiki.md  project-guide.md  projects-db-react.md  projects-db-rust.md
.agent/workflows/: chakra-component.md
.github/: dependabot.yml  funding.yml
.github/workflows/: pr-e2e.yml  release.yml  tests.yml
docs/: release.json
scripts/: pngStrip.js  release.ts  test-setup.sh  update-fbs.sh  version.ts
src/: App.tsx  Dev.tsx  ErrorFallback.tsx  Onboard.tsx  global.d.ts  index.css  main.tsx  menu.ts  testHooks.ts  types.ts  views.ts  views.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: cnets.rs  enums.rs  image_cnets.rs  image_controls.rs  image_loras.rs  images.rs  loras.rs  mod.rs  models.rs  prelude.rs  projects.rs  seaql_migrations.rs  templates.rs  watch_folder.rs  watch_folders.rs
src-tauri/entity2/src/: clip.rs  dictitem_v_dflat_internal.rs  mod.rs  prelude.rs  tensordata.rs  tensordata_f20.rs  tensordata_f22.rs  tensordata_f24.rs  tensordata_f26.rs  tensordata_f28.rs  tensordata_f30.rs  tensordata_f32.rs  tensorhistorynode.rs  tensorhistorynode_f22.rs  tensorhistorynode_f24.rs  tensorhistorynode_f48.rs  tensorhistorynode_f60.rs  tensorhistorynode_f62.rs  tensorhistorynode_f66.rs  tensorhistorynode_f70.rs  tensorhistorynode_f86.rs  tensormoodboarddata.rs  tensormoodboarddata_f10.rs  tensors.rs  texthistorynode.rs  textlineagenode.rs  textlineagenode_f6.rs  thumbnailhistoryhalfnode.rs  thumbnailhistorynode.rs
src-tauri/fpzip-sys/: .gitignore  Cargo.toml  LICENSE  README.md  VENDORED_FROM.txt  build.rs  wrapper.h
src-tauri/fpzip-sys/src/: lib.rs
src-tauri/macros/: Cargo.toml  cargo.toml
src-tauri/macros/src/: lib.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260115_190743_num_frames_and_fingerprint.rs  m20260308_105024_add_maint_column.rs
src-tauri/src/: bookmarks.rs  extra.rs  ffmpeg.rs  lib.rs  migrations.rs  vid.rs  vid_export.rs
src-tauri/src/bookmarks/: bookmarks_linux.rs  bookmarks_mac.rs
src-tauri/src/clipboard/: linux.rs  mac.rs  mod.rs
src-tauri/src/dt_project/: project_db.rs  tensor_history.rs  tensor_history_generated.rs
src-tauri/src/dt_projectx/: dt_project.rs  mod.rs  project_db.rs  tensor_history_generatedx.rs  tensor_history_nodex.rs
src-tauri/src/dtp_service/: actor.rs  data.rs  dt_data.rs  dtp_service.rs  events.rs  helpers.rs  mod.rs  scheduler.rs  watch.rs
src-tauri/src/dtp_service/jobs/: check_file.rs  check_folder.rs  example.rs  job.rs  maintenance.rs  mod.rs  project_jobs.rs  sync.rs  sync_folder.rs  sync_models.rs
src-tauri/src/objc/: FolderPicker.m
src-tauri/src/projects_db/: audio.rs  commands.rs  dt_project.rs  dtm_dtproject.rs  filters.rs  folder_cache.rs  metadata.rs  mod.rs  projects_db.rs  projects_dbx.rs  search.rs  sync.rs  tensor_history.fbs  tensor_history.rs  tensor_history_generated.rs  tensor_history_tensor_data.rs  tensors.rs  text_history.rs  text_history_sample.json
src-tauri/src/projects_db/dt_project/: clip.rs  maintenance.rs  mod.rs  raw.rs  tensor_data.rs  tensor_history_node.rs  tensor_history_node_2.rs  tensor_moodboard_data.rs
src-tauri/src/projects_db/dt_project/data/: mod.rs  tensor_data.rs  tensor_history_node_data.rs
src-tauri/src/projects_db/dtos/: clip.rs  image.rs  mod.rs  model.rs  project.rs  tensor.rs  text.rs  watch_folder.rs
src-tauri/src/projects_db/fbs/: clip.fbs  clip_generated.rs  control_generated.rs  control_input_type_generated.rs  control_mode_generated.rs  lo_ra_generated.rs  lo_ramode_generated.rs  mod.rs  reason_generated.rs  sampler_type_generated.rs  seed_mode_generated.rs  tensor_data.fbs  tensor_data_generated.rs  tensor_history.fbs  tensor_history_generated.rs  tensor_history_node_generated.rs  tensor_moodboard_data.fbs  tensor_moodboard_data_generated.rs  text_history.fbs  text_history_generated.rs  text_history_node_generated.rs  text_modification_generated.rs  text_range_generated.rs  text_type_generated.rs
src-tauri/src/projects_db/projects_db/: images.rs  import.rs  mixed_error.rs  mod.rs  models.rs  projects.rs  watchfolders.rs
src-tauri/src/projects_db/tensor_history_mod/: control.rs  lora.rs  mod.rs
src-tauri/src/swift/: FolderPicker.swift
src-tauri/tests/: dt_project.rs  lib.rs  scheduler.rs  search.rs  setup.rs  sync.rs
src-tauri/tests/common/: mod.rs  projects.rs
src/commands/: DTProject.ts  DTProjectTypes.ts  DtpService.ts  DtpServiceTypes.ts  bookmarks.ts  index.ts  projects.ts  urls.ts  vid.ts
src/components/: ColorPalette.tsx  Command1Button.tsx  CommandButton.tsx  DataItem.tsx  FloatIndicator.tsx  FrameCountIndicator.tsx  IconButton.tsx  IconToggle.tsx  PanelList.test.tsx  PanelList.tsx  PanelList2.tsx  Pose.tsx  Progress.tsx  SliderWithInput.tsx  TauriDragHandle.tsx  ToolbarItem.tsx  Tooltip.tsx  VideoFrames.tsx  ViewContainer.tsx  common.tsx  iconButton.tsx  icons.tsx  index.ts
src/context/: Messages.tsx
src/dtProjects/: DTProjects.tsx  DTProjectsContainer.tsx  EmptyGrid.tsx  ImportProgress.tsx  MenuContext.tsx  SearchIndicator.tsx  SettingsPanel.tsx  types.ts
src/hooks/: StateController.ts  appState.ts  keyboard.tsx  motion.ts  useDecay.ts  useDragWindow.ts  useDrop.ts  useFfmpeg.tsx  useGetContext.tsx  useIdSelection.ts  useInitRef.ts  useRootElement.ts  useSelectable.tsx  useSelectableV.tsx  valtioHooks.ts
src/metadata/: Containers.tsx  Metadata.tsx  helpers.ts
src/mocks/: tauri-api.ts  tauri-app.ts  tauri-core.ts  tauri-dialog.ts  tauri-event.ts  tauri-fs.ts  tauri-menu.ts  tauri-opener.ts  tauri-path.ts  tauri-process.ts  tauri-shell.ts  tauri-store.ts  (+2 more)
test/: .testrunner.env  dev.env  global.d.ts  package-lock.json  package.json  readme.md  tsconfig.json  wdio.conf.ts
(+227 files in other folders)
