[workspace]
members = ["migration", "entity", ".", "fpzip-sys"]

[package]
name = "dtm"
version = "0.0.6"
description = "A little app for reading Draw Things Metadata"
authors = ["kcjerrell"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dtm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
entity = { path = "./entity" }
migration = { path = "./migration" }
fpzip-sys = { path = "./fpzip-sys" }
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-http = "2"
tauri-plugin-valtio = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
little_exif = "0.6.15"
web-image-meta = "0.2.1"
quick-xml = "0.38.3"
chrono = { version = "0.4", features = ["serde"] }
flatbuffers = "25.9.23"
sqlx = { version = "0.8", features = [ "runtime-async-std", "tls-native-tls" ] }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "runtime-async-std-native-tls",
  "macros",
  "sqlite-use-returning-for-3_35"
] }
futures = "0.3.28"
tokio = "1.48.0"
mime = "0.3.17"
once_cell = "1.21.3"
moka = { version = "0.12.11", features = ["future"] }
bytes = "1.10.1"
byteorder = "1.5.0"
half = "2"
bytemuck = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1.0.100"
num_enum = "0.7.5"
base64 = "0.22.1"
flate2 = "1.1.5"
png = "0.18.0"


[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
objc2-app-kit = "0.3.1"
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", version = "4.0.0" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"