[workspace]
members = ["migration", "entity", ".", "fpzip-sys"]

[package]
name = "dtm"
version = "0.3.1"
description = "A little app for reading Draw Things Metadata"
authors = ["kcjerrell"]
edition = "2021"

[lib]
name = "dtm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
# Local Modules
entity = { path = "./entity" }
migration = { path = "./migration" }
fpzip-sys = { path = "./fpzip-sys" }
dtm-macros = { path = "./macros" }

# Core Tauri
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "devtools"] }

# Tauri Plugins (all GitHub v2 versions)
# Ensures a single consistent dependency tree
tauri-plugin-fs = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = ["watch"] }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-valtio = "2"
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

# Third-party / utility crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
little_exif = "0.6.15"
web-image-meta = "0.2.1"
quick-xml = "0.38.3"
chrono = { version = "0.4", features = ["serde"] }
flatbuffers = "25.9.23"
sqlx = { version = "0.8", features = [ "runtime-async-std", "tls-native-tls" ] }
sea-orm = { version = "2.0.0-rc", features = [
  "sqlx-sqlite",
  "runtime-async-std-native-tls",
  "macros",
  "sqlite-use-returning-for-3_35",
#  "debug-print"
] }
futures = "0.3.28"
tokio = { version = "1.48.0", features = ["full"] }
mime = "0.3.17"
once_cell = "1.21.3"
moka = { version = "0.12.11", features = ["future"] }
bytes = "1.10.1"
byteorder = "1.5.0"
half = "2"
bytemuck = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1.0.100"
num_enum = "0.7.5"
base64 = "0.22.1"
flate2 = "1.1.5"
png = "0.18.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
sea-query = "1.0.0-rc.20"
unicode-normalization = "0.1.25"
log = "0.4"
tauri-plugin-log = "2"
sevenz-rust = "0.6.1"
sha2 = "0.10.9"
futures-util = "0.3.31"
regex = "1.12.2"

# macOS-only
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.2"
objc2-foundation = "0.3.1"
objc2-app-kit = "0.3.1"
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", version = "4.0.0" }

# Desktop-only (not mobile)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
